--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title> Web Development Therapy </title>
 	<link rel="stylesheet" type="text/css" href="css/vendor/animate.css">
-	<link rel="stylesheet" href="css/vendor/bootstrap.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Source+Serif+Pro:400,700,600' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,900,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/journal_styles.css">
@@ -93,8 +93,11 @@
 			</div>
 		</div>
 
-		<script type="text/javascript" src="js/vendor/jquery.min.js"></script>
-		<script type="text/javascript" src="js/vendor/bootstrap.min.js"></script>
+		<script
+  		src="https://code.jquery.com/jquery-1.12.4.min.js"
+  		integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
+  		crossorigin="anonymous"></script>
+		<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/journal_factory.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
 	</body>
